--- a/static/css/spotify/tracks.css
+++ b/static/css/spotify/tracks.css
@@ -57,6 +57,7 @@
   width: 100%;
 }
 
+
 .rows:hover {
   background-color: #ffffff20;
 }
@@ -64,6 +65,7 @@
 .container {
   width: 50px;
   height: 50px;
+  float: left;
   position: relative;
 }
 .overlay {
