--- a/templates/index.html
+++ b/templates/index.html
@@ -1,62 +1,66 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta property="og:title" content="Sketyl" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://sketyl.com" />
-    <meta property="og:image" content="{{url_for('static', filename='assets/logo.png')}}"/>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="{{ url_for('static', filename='assets/favicon.ico') }}"
-      id="favicon"
-    />
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
-    <title>Sketyl</title>
+
+<head>
+  <meta property="og:title" content="Sketyl" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://sketyl.com" />
+  <meta property="og:image" content="{{url_for('static', filename='assets/logo.png')}}" />
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon.ico') }}"
+    id="favicon" />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}">
+  <title>Sketyl</title>
   {% block head %}{% endblock %}
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img class="logo" src="{{url_for('static', filename='assets/logo.png')}}">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img class="logo" src="{{url_for('static', filename='assets/logo.png')}}">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <!-- <li class="nav-item">
               <a class="nav-link" aria-current="page" href="{{url_for('index')}}">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{url_for('_spotify')}}">Spotify</a>
-            </li>
-          </ul>
-          {% if not request.cookies.get("user_id") %}
-          <a href="{{url_for('spotify_connect')}}" class="btn btn-primary login-button" role="button" aria-pressed="true">Connect</a>
-          {% else %}
-          <a href="{{url_for('spotify_disconnect')}}" class="btn btn-primary logout-button" role="button" aria-pressed="true">Disconnect</a>
-          {% endif %}
-        </div>
+            </li> -->
+        </ul>
+        {% if not request.cookies.get("user_id") %}
+        <a href="{{url_for('spotify_connect')}}" class="btn btn-primary login-button" role="button"
+          aria-pressed="true">Connect</a>
+        {% else %}
+        <a href="{{url_for('spotify_disconnect')}}" class="btn btn-primary logout-button" role="button"
+          aria-pressed="true">Disconnect</a>
+        {% endif %}
       </div>
-    </nav>
+    </div>
+  </nav>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script
-    src="https://code.jquery.com/jquery-3.6.0.js"
-    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 
-    <!-- Custom JS for this template -->
-    <script rel='text/javascript' src="{{url_for('static', filename='js/index.js')}}"></script>    {% block body %}{% endblock %}
-  </body>
+  <!-- Custom JS for this template -->
+  <script rel='text/javascript' src="{{url_for('static', filename='js/index.js')}}"></script> {% block body %}{%
+  endblock %}
+</body>
+
 </html>
