--- a/templates/spotify/albums.html
+++ b/templates/spotify/albums.html
@@ -39,24 +39,23 @@
             <tr class="rows" data-album="{{album.json}}">
                 <th scope="row">{{album.index}}</th>
                 <td>
-                    <img class="cover" src="{{album.image}}">
+                    <img class="cover" src="{{album.cover}}">
                 </td>
                 <td>
-                    <a href="{{url_for('spotify_album', album_id=album.id)}}" class="link-light track">
+                    <a href="{{url_for('albums', album_id=album.id)}}" class="link-light track">
                         {{album.name}}
                     </a>
                 </td>
                 <td>
                     {% for artist in album.artists %}
-                    <a class="link-light"
-                        href="{{url_for('spotify_artist', artist_id=artist['id'])}}">{{artist["name"]}}</a>
+                    <a class="link-light" href="{{artist.url}}">{{artist.name}}</a>
                     {% endfor %}
                 </td>
                 <td class="unseen">
                     {{album.release}}
                 </td>
                 <td class="unseen">
-                    {{album.tracks}}
+                    {{album.total_tracks}}
                 </td>
             </tr>
             {% endfor %}
