--- a/static/css/spotify/login.css
+++ b/static/css/spotify/login.css
@@ -12,17 +12,12 @@
 }
 
 
-/*
- * Base structure
- */
-
-body {
+.text-center {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
-
-.text-center {
-  padding: 3%;
-  padding-top: 15%;
-  padding-bottom: 15%;
+  padding: 15% 3%;
+  height:100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
