--- a/templates/spotify/albums.html
+++ b/templates/spotify/albums.html
@@ -1,4 +1,4 @@
-{% extends 'spotify/main.html' %} {% block head %} {{ super() }}
+{% extends 'index.html' %} {% block head %} {{ super() }}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/spotify/albums.css') }}" />
 {% endblock %} {% block body %} {{ super() }}
 <div class="table-box bg-dark table-responsive">
