--- a/templates/spotify/login.html
+++ b/templates/spotify/login.html
@@ -1,4 +1,4 @@
-{% extends "spotify/main.html" %}
+{% extends "index.html" %}
 {% block head %}
 {{super()}}
 <!-- Custom styles for this template -->
