--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+}
+
 .logo {
     width: 50px;
     border: 3px solid #15B8AE;
@@ -24,4 +28,8 @@
 .login-button:hover {
     background-color: #017b91;
     border-color: #017b91;
+}
+
+.nav-link {
+    font-size: 18px;
 }
