--- a/static/css/spotify/artists.css
+++ b/static/css/spotify/artists.css
@@ -16,9 +16,9 @@
     display: block;
     margin: 0 auto;
     padding: 30px;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
+    /* /* height: 100%; */
+    width: 100%; 
+    /* border-radius: 50%; */
 }
 
 .artist .name {
