--- a/static/css/spotify/tracks.css
+++ b/static/css/spotify/tracks.css
@@ -29,8 +29,7 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px;
-  border-radius: 5px;
+  padding: 0 20px 20px;
 }
 
 .table-name {
@@ -83,7 +82,6 @@
 .cover {
   height: 100%;
   width: 100%;
-  border-radius: 2px;
 }
 
 .fa-play,
@@ -109,7 +107,7 @@
   opacity: 1;
 }
 
-@media only screen and (max-width: 630px) {
+@media only screen and (max-width: 992px) {
   .unseen {
     display: none;
   }
