--- a/templates/home.html
+++ b/templates/home.html
@@ -1,22 +1,57 @@
 {% extends 'index.html' %}
 {% block head %}
-<link
-    rel="stylesheet"
-    href="{{ url_for('static', filename='css/spotify/chart.css') }}"
-/>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}" />
 {{super()}}
 {% endblock %}
 {% block body %}
 {{super()}}
-<h1>
-Yes, I know this website looks terrible. It'll improve. Hopefully...
-Oh and yes all the code is on github. Just google "sketyl github" or something like that.
-Professionalism is my forte and it shows. Doesn't it? Sketyl is a cool name no? It's a random 6 letter word I came up with that happened to be for sale on namecheap for 4 bucks. Also cool because it sounds like skettle, which apparently is jamaican slang for prostitutes.
-Fuck I forgot to mention that a bunch of the tabs like recent tracks and playlists will probably crap out for you.
-Spotify hasn't approved Sketyl for that yet. Not my fault, so yeah my code isn't shitty just because you see internal server errors. Well the code is sorta shitty, but that's not why it craps out.
-Wuack is this dumbfuckery encouragement enough? When are you gonna make a homepage? :thinking:
-</h1>
-<img src="https://cdn.discordapp.com/emojis/782053642064494633.webp?size=160&quality=lossless">
-<img src="https://cdn.discordapp.com/emojis/779433733400166420.webp?size=160&quality=lossless">
-<h1>I can't believe people actually visit this thing, but I guess there are 7 billion people googling round the clock. So yeah... just click that spotify link up there ^^, or expand the hamburger if you're on mobile and connect your account. Why not? You already wasted 10 seconds reading this shit. Do you like the logo? Yes, the one that looks more like a deformed sperm than a 16th note. I drew it on the apple notes app. I think I have a bright future as a digital artist don't you agree?</h1>
-{% endblock %}
+<div>
+    <div class="background">
+        <img class="landscape" src="{{url_for('static', filename='assets/landscape.jpeg')}}">
+        <div class="content d-flex align-items-center text-center">
+            <div>
+                <h1>Sketyl</h1>
+                <h2>Spotify Statistics, Style, Satire, and Shit</h2>
+                <button type="button" class="btn btn-lg">Connect to Spotify</button>
+            </div>
+        </div>
+    </div>
+    <div class="text-box">
+        <h1>
+            Yes, I know this website looks terrible. It'll improve. Hopefully...
+            Oh and yes all the code is on github. Just google "sketyl github" or something like that.
+            Professionalism is my forte and it shows. Doesn't it? Sketyl is a cool name no? It's a random 6 letter word
+            I came
+            up with that happened to be for sale on namecheap for 4 bucks. Also cool because it sounds like skettle,
+            which
+            apparently is jamaican slang for prostitutes.
+            Fuck I forgot to mention that a bunch of the tabs like recent tracks and playlists will probably crap out
+            for you.
+            Spotify hasn't approved Sketyl for that yet. Not my fault, so yeah my code isn't shitty just because you see
+            internal server errors. Well the code is sorta shitty, but that's not why it craps out.
+            Wuack is this dumbfuckery encouragement enough? When are you gonna make a homepage? :thinking:
+        </h1>
+        <h1>I can't believe people actually visit this thing, but I guess there are 7 billion people googling round the
+            clock.
+            So yeah... just click that spotify link up there ^^, or expand the hamburger if you're on mobile and connect
+            your
+            account. Why not? You already wasted 10 seconds reading this shit. Do you like the logo? Yes, the one that
+            looks
+            more like a deformed sperm than a 16th note. I drew it on the apple notes app. I think I have a bright
+            future as a
+            digital artist don't you agree? Or perhaps even a painter.
+        </h1>
+        <div class="pasted">
+            <img class="portrait" src="{{url_for('static', filename='assets/portrait.jpeg')}}">
+            <img class="logo_overlay" src="{{url_for('static', filename='assets/logo.png')}}" </div>
+        </div>
+        <h1>Ahh yes. Madame Vigeé Le Brun would be proud.</h1>
+    </div>
+
+    <footer class="border-top footer">
+        <div class="container text-center">
+            <a class="link-secondary" href="#">Privacy Policy</a>
+            <a class="link-secondary" href="#">FAQs</a>
+        </div>
+    </footer>
+    {% endblock %}
