--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta property="og:title" content="Sketyl" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://sketyl.com" />
+  <meta property="og:url" content="https://sketyl.com/" />
   <meta property="og:image" content="{{url_for('static', filename='assets/logo.png')}}" />
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="{{url_for('home')}}">
         <img class="logo" src="{{url_for('static', filename='assets/logo.png')}}">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -33,12 +33,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <!-- <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{url_for('index')}}">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{url_for('_spotify')}}">Spotify</a>
-            </li> -->
+          <li class="nav-item"><a class="nav-link" href="{{url_for('spotify_liked')}}">Liked Tracks</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('spotify_recent')}}">Recent Tracks</a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('spotify_top_tracks')}}">Top
+              Tracks</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('spotify_top_artists')}}">Top
+              Artists</a></li>
+          <!-- <li class="nav-item"><a class="nav-link" href="{{url_for('spotify_albums')}}">Saved Albums</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('spotify_playlists')}}">Saved
+              Playlists</a>
+          </li> -->
         </ul>
         {% if not request.cookies.get("user_id") %}
         <a href="{{url_for('spotify_connect')}}" class="btn btn-primary login-button" role="button"
@@ -59,8 +64,8 @@
     crossorigin="anonymous"></script>
 
   <!-- Custom JS for this template -->
-  <script rel='text/javascript' src="{{url_for('static', filename='js/index.js')}}"></script> {% block body %}{%
-  endblock %}
+  <script rel='text/javascript' src="{{url_for('static', filename='js/index.js')}}"></script>
+  {% block body %}{% endblock %}
 </body>
 
 </html>
