--- a/templates/spotify/artists.html
+++ b/templates/spotify/artists.html
@@ -1,5 +1,5 @@
 <!-- Render a list of artists -->
-{% extends 'spotify/main.html' %} {% block head %} {{ super() }}
+{% extends 'index.html' %} {% block head %} {{ super() }}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/spotify/tracks.css') }}" />
 <link rel="stylesheet" href="{{ url_for('static', filename='css/spotify/artists.css') }}" />
 {% endblock %} {% block body %} {{ super() }}
