--- a/templates/spotify/tracks.html
+++ b/templates/spotify/tracks.html
@@ -1,4 +1,4 @@
-{% extends 'spotify/main.html' %} {% block head %} {{ super() }}
+{% extends 'index.html' %} {% block head %} {{ super() }}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/spotify/tracks.css') }}" />
 {% endblock %} {% block body %} {{ super() }}
 <div class="table-box bg-dark table-responsive">
@@ -58,7 +58,7 @@
         <tbody>
             {% for track in tracks %}
             <tr class="rows" data-track="{{track.json}}">
-                <th scope="row">{{track.index}}</th>
+                <th scope="row">{{loop.index}}</th>
                 <td>
                     <div class="container">
                         <div class="overlay">
@@ -77,7 +77,7 @@
                 </td>
                 <td>
                     {% for artist in track.artists %}
-                    <a class="link-light" href="{{artist.url}}" FIX THIS>{{artist.name}}</a>
+                    <a class="link-light" href="{{artist.url}}">{{artist.name}}</a>
                     {% endfor %}
                 </td>
                 <td class="unseen">{{track.duration}}</td>
@@ -94,5 +94,5 @@
     <script src="{{ url_for('static', filename='js/spotify.js')}}"></script>
     <script src="{{url_for('static', filename='js/spotify/utils.js')}}"></script>
     <script src="{{url_for('static', filename='js/spotify/tracks.js')}}"></script>
-    {% endblock %}
 </div>
+{% endblock %}
